[package]
name = "fix-twitterlinks-bot"
version = "0.1.0"
edition = "2021"
description = "A Discord bot that fixes Twitter links by replacing their domain with fxtwitter and fixvx respectively."

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.33.0", features = ["full"], default-features = false }
reqwest = { version = "0.11.22", default-features = false }

